--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "classnames": "2.3.2",
     "react": "16.14.0",
     "react-bootstrap": "0.32.4",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-scripts": "3.4.4"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
